force-app/main/default/objects/Transaction_Policy_Event__e/Transaction_Policy_Event__e.object-meta.xml
<CustomObject>
    <description>A Platform Event which has the purpose to alert systems that their is a security issue.  From a low level (level 1) threat to a potential breach (level 4)</description>
    <label>Transaction Policy Event</label>
    <pluralLabel>Transaction Policy Events</pluralLabel>
</CustomObject>