force-app/main/default/objects/Transaction_Policy_Event__e/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>