force-app/main/default/objects/Transaction_Policy_Event__e/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Salesforce&apos;s Summary field that is given with some events</description>
    <label>Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>