force-app/main/default/objects/Transaction_Policy_Event__e/fields/Threat_Level__c.field-meta.xml
<CustomField>
    <fullName>Threat_Level__c</fullName>
    <description>1-4 threat level depending on severity</description>
    <label>Threat Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>